# ai

./: README.md  devbox.json  index.html  process-compose.yaml  pyproject.toml  tsconfig.node.tsbuildinfo  vitest.config.js
src/: App.tsx  bigramTrainer.ts  colormaps.ts  consts.ts  corpora.ts  flashStyles.ts  formulas.ts  funcs.ts  legendEntries.ts  main.tsx  presets.ts  types.ts
src/components/: AfterSoftmax.tsx  BigramFlow.tsx  ChangeBadge.tsx  CodePanel.tsx  CrossEntropyLoss.tsx  DistanceToFinal.tsx  FlashMatrixTable.tsx  FormulaDisplay.tsx  ForwardPassSection.tsx  ForwardPassTable.tsx  GapToFinal.tsx  GradientColumn.tsx  Heatmap.tsx  JsFormula.tsx  MatrixEditor.tsx  OneStepTrainer.tsx  Panel.tsx  PredictionsVsFinal.tsx  PreviousSoftmax.tsx  PreviousWeights.tsx  RecentLoss.tsx  RowConvergenceTable.tsx  RowSoftmax.tsx  Term.tsx  TokenChip.tsx  TokenIdMap.tsx  TrainingCorpus.tsx  TrainingCorpusOptions.tsx  WeightMatrix.tsx  WeightUpdate.tsx  WeightUpdateCode.tsx
src/hooks/: useDebouncedApi.ts
src/llm2/: gpt.py  gpt_pure.py  gpt_pure_log.py  make_data.py  softmax.py
src/pages/: AttentionConceptsReferencePage.tsx  AttentionWeightedSumPage.tsx  BigramBackwardPage.tsx  CrossEntropyLossPage.tsx  FormulasPage.tsx  LowerTriMaskPage.tsx  NormalizeRowsPage.tsx  OneHotTruthPage.tsx  (+6 more)
tests/: CombinedInputPage.test.tsx  MatrixEditor.test.tsx  PresetPicker.test.tsx  VectorBars.test.tsx  VectorEditor.test.tsx  api.test.ts  pages.smoke.test.tsx  test_gpt_pure.py  test_stage1.py  test_stage2a.py
viz/backend/: app.py  pyproject.toml  schemas.py
viz/backend/tests/: test_app.py
(+63 files in other folders)
