[project]
name = "llm2"
version = "0.1.0"
description = "Building a GPT in seven progressive stages, plus a pure-Python bigram baseline."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "torch>=2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/llm2"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.uv.workspace]
members = ["viz/backend"]
